feat: add GitHub workflow for manual NodeJS and npm installation on Ubuntu

--- a/.github/workflows/node-installer.yml
+++ b/.github/workflows/node-installer.yml
@@ -1,1 +1,25 @@
+# This is a basic workflow to help you get started with Actions
+# Github Action Workflow Name
 name: nodejs installer
+# When to run the workflow - make it manually triggerable
+on: workflow_dispatch
+
+# Steps to run
+jobs:
+  # Job Name : installation
+  installation:
+    # Runner - Where to run the job
+    runs-on: ubuntu-latest
+    # Steps to run - to do job (installation)
+    steps:
+      # step 1 - Checkout the code
+      - name: Checkout # name of the step
+        uses: actions/checkout@v3
+      # step 2 - Install NodeJS and npm
+      - name: Install NodeJS # name of the step
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y nodejs npm
+      
+
+
