--- a/.github/workflows/node-installer.yml
+++ b/.github/workflows/node-installer.yml
@@ -20,6 +20,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y nodejs npm
+      # step 3 - Verify the installation
+      - name: Verify Installation # name of the step
+        run: |
+          node --version
+          npm --version
       
 
 
